--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^4.3.0",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.7",
+    "v-calendar": "^2.4.1",
     "vue": "^2.6.14"
   },
   "devDependencies": {
